--- a/MvcCoreTutorial/Views/Person/EditPerson.cshtml
+++ b/MvcCoreTutorial/Views/Person/EditPerson.cshtml
@@ -25,7 +25,7 @@
             </div>
         }
 
-        <button type="submit" class="btn btn-primary">Update</button>
+        <button type="submit" class="btn btn-warning">Update</button>
         <a href="" class="btn btn-primary">All Person</a>
     </form>
 </div>
